<resources>
    <string name="app_name">DDM Crash Log</string>
    <string name="welcome_to_the_ddm_crash_log_please_press_continue_to_go_to_sign_in">Welcome to the DDM Crash Log, please press \'Continue\' to go to sign in</string>
    <string name="welcome_to_the_crash_log_for_ddm_s_applications_on_ios_and_android_for_lcp_hypo_and_soon_gro">Welcome to the Crash Log for DDM\'s applications on iOS and Android for LCP , Hypo and soon Gro</string>
    <string name="lets_get_started">Lets Get Started…</string>
    <string name="which_platform_are_we_adding_records_to_today">Which platform are we adding records to today?</string>
    <string name="_5"><![CDATA[<5]]></string>
    <string name="_20"><![CDATA[>20]]></string>
    <string name="_10_20">10-20</string>
    <string name="_5_10">5-10</string>
    <string name="where_did_the_crash_occur">Where did the crash occur?</string>
    <string name="device_hint">Choose a device</string>
    <string-array name="devices_array">
        <item>Samsung S9</item>
        <item>Samsung S8</item>
        <item>Samsung S7</item>
        <item>Samsung S6</item>
        <item>Samsung S5</item>
    </string-array>
    <string name="app_version_hint">Choose a app version</string>
    <string name="what_device_s_has_the_crash_occured_on">What device(s) has the crash occured on?</string>
    <string name="what_app_version_s_did_the_crash_occrur_on">What App version(s) did the crash occrur on?</string>
    <string name="what_os_version_did_the_crash_occur_on">What OS version did the crash occur on?</string>
    <string name="is_the_crash_reproducable">Is the crash reproducable?</string>
    <string name="is_the_crash_resolved">Is the crash resolved?</string>
    <string name="crash_details">Crash Details</string>
    <string-array name="appversion_array">
        <item>Latest</item>
    </string-array>
    <string-array name="appledevices_array">
        <item>iPhone XS</item>
        <item>iPhone XS MAX</item>
        <item>iPhone XR</item>
        <item>iPhone X</item>
        <item>iPhone 8</item>
        <item>iPhone 8 Plus</item>
    </string-array>
    <string-array name="reproducable">
        <item>Yes</item>
        <item>No</item>
    </string-array>
</resources>
