<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/colorPrimary"
    tools:context=".Android_Bug_Tracker2">

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/grobackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="24dp"
        android:paddingTop="20dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="0"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="BackArrowToAndroid1"
            android:scaleType="fitCenter"
            android:tint="@android:color/white"
            android:visibility="visible"
            app:srcCompat="@drawable/backarrow" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Android tracking"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="0"
            android:onClick="LogOut"
            android:scaleType="fitCenter"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="@android:color/white"
            android:visibility="visible"
            app:srcCompat="@drawable/exitapp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/apple_linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/android_image"
            android:layout_width="63dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/androidlogo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/crash_details"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="8pt" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:id="@+id/resolved_field"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/is_the_crash_resolved"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/resolved_spinner"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/reproducable"
            android:prompt="@string/app_version_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:id="@+id/reproducable_field"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/is_the_crash_reproducable"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/reproducable_spinner"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/reproducable"
            android:prompt="@string/app_version_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:id="@+id/os_version"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/what_os_version_did_the_crash_occur_on"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/os_spinner"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/appversion_array"
            android:prompt="@string/app_version_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/app_version"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/what_app_version_s_did_the_crash_occrur_on"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/version_spinner"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/appversion_array"
            android:prompt="@string/app_version_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="53dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apple_linear">

        <TextView
            android:id="@+id/crash_num"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/what_device_s_has_the_crash_occured_on"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/devices_array"
            android:prompt="@string/device_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <ImageView
            android:id="@+id/ddm_logo"
            android:layout_width="wrap_content"
            android:layout_height="124dp"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/ddmlogo2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_1"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:onClick="SaveAndroidCrashData"
            android:text="SAVE"
            android:textColor="@android:color/white" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>