<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".android_bug_tracker">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="99dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="6dp"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

        <TextView
            android:id="@+id/users_affected"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:text="How many users has it affected?"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobtn_user1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorActionBar"
                android:text="@string/_5" />

            <RadioButton
                android:id="@+id/radiobtn_user2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorActionBar"
                android:text="@string/_5_10" />

            <RadioButton
                android:id="@+id/radiobtn_user3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorActionBar"
                android:text="@string/_10_20" />

            <RadioButton
                android:id="@+id/radiobtn_user4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorActionBar"
                android:text="@string/_20" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="99dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <TextView
            android:id="@+id/description_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Description or steps on how to reproduce?"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textfield_background"
            android:ems="10"
            android:gravity="top|left"
            android:hint="Description of crash..."
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="2"
            android:padding="8dp"
            android:textCursorDrawable="@drawable/black_typing_cursor"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="0dp"
        android:layout_height="99dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:gravity="left"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <TextView
            android:id="@+id/crash_user_num"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_weight="1"
            android:text="How many crashes have occured of this type?"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobtn_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorActionBar"
                android:text="@string/_5" />

            <RadioButton
                android:id="@+id/radiobtn_min2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorActionBar"
                android:text="@string/_5_10" />

            <RadioButton
                android:id="@+id/radiobtn_min3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorActionBar"
                android:text="@string/_10_20" />

            <RadioButton
                android:id="@+id/radiobtn_min4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorActionBar"
                android:text="@string/_20" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <TextView
            android:id="@+id/crash_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/where_did_the_crash_occur"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/location_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textfield_background"
            android:ems="10"
            android:hint="Crash Location"
            android:inputType="number"
            android:padding="8dp"
            android:textCursorDrawable="@drawable/black_typing_cursor"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/background_1"
            android:gravity="center"
            android:onClick="AndroidScreen2"
            android:text="CONTINUE"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="98dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ddm_logo"
            android:layout_width="wrap_content"
            android:layout_height="124dp"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/ddmlogo2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Android_Linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:paddingStart="65dp"
            android:text="Let's Track Android"
            android:textAlignment="center"
            android:textColor="@color/colorActionBar"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/android_image"
            android:layout_width="63dp"
            android:layout_height="80dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/androidlogo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/top_nav"
        android:layout_weight="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:onClick="BackArrowToMain"
            android:scaleType="fitStart"
            android:tint="@color/colorActionBar"
            android:tintMode="add"
            app:srcCompat="@drawable/blackarrow" />

        <ImageButton
            android:id="@+id/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitEnd"
            android:tint="@color/colorActionBar"
            android:tintMode="add"
            app:srcCompat="@drawable/signout" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Android_Linear">

        <TextView
            android:id="@+id/crash_num"
            android:layout_width="318dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="What is the Crash ID Number (#)?" />

        <EditText
            android:id="@+id/crash_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/textfield_background"
            android:ems="10"
            android:hint="#"
            android:inputType="number"
            android:padding="8dp"
            android:textCursorDrawable="@drawable/black_typing_cursor"
            android:textSize="14sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>